tests/parser/good/record_type.hel
// @name record_type
// @phase parser
// @expect success

type Point = { x: f64, y: f64 };

type Empty = {}
