tests/parser/bad/foreign_bad.hel
// @name foreign_bad
// @phase parser
// @expect error

foreign x;
